# dronefly-cli

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
dronefly_cli/: main.py
