[tool.flake8]
max-line-length = 100

[tool.bandit]
exclude_dirs = ["tests"]

[tool.poetry]
name = "dronefly-cli"
version = "0.2.0"
description = "Dronefly command-line interface"
authors = ["Ben Armstrong <synrg@debian.org>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
pyreadline3 = "^3.4.1"
dronefly-core = { git = "https://github.com/dronefly-garden/dronefly-core", branch="PR-life-list-tree" }
rich = "^13.2"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
pylint = "^2.10.2"
pytest-asyncio = "^0.20.3"

[tool.poetry.scripts]
dronefly = 'dronefly_cli.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
